--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,13 @@
   <parent>
     <artifactId>onebusaway</artifactId>
     <groupId>org.onebusaway</groupId>
-    <version>1.1.4</version>
+    <version>1.1.6</version>
   </parent>
   <artifactId>onebusaway-gtfs-realtime-exporter</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>onebusaway-gtfs-realtime-exporter</name>
   <description>Support library for creating an application that shares GTFS-realtime data.</description>
+  <url>https://github.com/OneBusAway/onebusaway-gtfs-realtime-exporter/wiki/</url>
 
   <properties>
     <gtfs_realtime_api_version>1.0.1-SNAPSHOT</gtfs_realtime_api_version>
@@ -23,10 +24,15 @@
   </repositories>
 
   <scm>
-    <connection>scm:svn:http://onebusaway.googlecode.com/svn/gtfs-realtime/onebusaway-gtfs-realtime-exporter/trunk</connection>
-    <developerConnection>scm:svn:https://onebusaway.googlecode.com/svn/gtfs-realtime/onebusaway-gtfs-realtime-exporter/trunk</developerConnection>
-    <url>http://code.google.com/p/onebusaway/source/browse/#svn/gtfs-realtime/onebusaway-gtfs-realtime-exporter/trunk</url>
+    <connection>scm:git:http://github.com/OneBusAway/onebusaway-gtfs-realtime-exporter.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/OneBusAway/onebusaway-gtfs-realtime-exporter.git</developerConnection>
+    <url>http://github.com/OneBusAway/onebusaway-gtfs-realtime-exporter</url>
   </scm>
+
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/OneBusAway/onebusaway-gtfs-realtime-exporter/issues</url>
+  </issueManagement>
 
   <distributionManagement>
     <!-- Even though we specify this in the parent pom, we need to specify it here to have full control over the url -->
