--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
   <parent>
     <artifactId>onebusaway</artifactId>
     <groupId>org.onebusaway</groupId>
-    <version>1.1.7</version>
+    <version>1.1.9</version>
   </parent>
   <artifactId>onebusaway-gtfs-realtime-exporter</artifactId>
-  <version>1.1.9</version>
+  <version>1.2.0-SNAPSHOT</version>
   <name>onebusaway-gtfs-realtime-exporter</name>
   <description>Support library for creating an application that shares GTFS-realtime data.</description>
   <url>https://github.com/OneBusAway/onebusaway-gtfs-realtime-exporter/wiki/</url>
