--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>onebusaway</artifactId>
     <groupId>org.onebusaway</groupId>
-    <version>1.1.9</version>
+    <version>1.1.10-SNAPSHOT</version>
   </parent>
   <artifactId>onebusaway-gtfs-realtime-exporter</artifactId>
   <version>1.2.0-SNAPSHOT</version>
@@ -14,6 +14,7 @@
 
   <properties>
     <gtfs_realtime_api_version>1.1.1-SNAPSHOT</gtfs_realtime_api_version>
+    <onebusaway_guice_jsr250_version>1.0.2</onebusaway_guice_jsr250_version>
     <jetty.version>8.1.11.v20130520</jetty.version>
     <!-- These properties are primarily used in configuring joint integration tests -->
     <org_onebusaway_test_port>9900</org_onebusaway_test_port>
@@ -88,7 +89,7 @@
     <dependency>
       <groupId>org.onebusaway</groupId>
       <artifactId>onebusaway-guice-jsr250</artifactId>
-      <version>1.0.2</version>
+      <version>${onebusaway_guice_jsr250_version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
