--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
   <scm>
     <connection>scm:git:http://github.com/OneBusAway/onebusaway-gtfs-realtime-exporter.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/OneBusAway/onebusaway-gtfs-realtime-exporter.git</developerConnection>
+    <developerConnection>scm:git:https://github.com/OneBusAway/onebusaway-gtfs-realtime-exporter.git</developerConnection>
     <url>http://github.com/OneBusAway/onebusaway-gtfs-realtime-exporter</url>
   </scm>
 
