Add guava cache with a configurable timeout. This will allow feeds that are built incrementally to avoid growing indefinitely.

--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
       <version>${onebusaway_guice_jsr250_version}</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>19.0</version>
+    </dependency>
   </dependencies>
 
   <build>
