fix: add missing javax.annotation dependency to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,6 @@
       <artifactId>slf4j-api</artifactId>
       <version>1.7.2</version>
     </dependency>
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -111,11 +110,16 @@
       <version>${onebusaway_guice_jsr250_version}</version>
       <scope>test</scope>
     </dependency>
-
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>19.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
     </dependency>
   </dependencies>
 
